Added Web Responsiveness
- Edited CSS and HTML to make the webpages mobile, tablet, and web responsive
- Changed the layout of some pages
- Added favicon and one more image

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="img\SVG\Asset 2.svg" />
   </head>
   <div id="wrapper">
     <body>
@@ -46,8 +47,8 @@
             </p>
           </div>
         </div>
+        <div id="titleCo"><h2>Let's Connect</h2></div>
         <div id="contactContainer">
-          <div id="titleCo"><h2>Let's Connect</h2></div>
           <div id="img1">
             <a
               href="https://www.linkedin.com/in/aliciamontgomery1/"
