--- a/projectPageA_2.html
+++ b/projectPageA_2.html
@@ -33,23 +33,33 @@
           <a id="backLink" href="projectPage_Art.html">Back to Projects</a>
           <div id="title"><h2>Hungry Society - Article Banners</h2></div>
           <div id="imgc1">
-            <img src="img/Korsha_1_1Artboard 1.jpg" alt="website image" />
+            <figure>
+              <img src="img/Korsha_1_1Artboard 1.jpg" alt="Graphic Art for Cusine Noir - 1" />
+              <figcaption class="caption">Graphic Art for Cusine Noir - 1</figcaption>
+            </figure>
           </div>
           <div id="parac1">
             <p>
               The client reached out to me to create some banner art for her article on The Hungry Society. It was an interview with the publisher of Cuisine Noir, the first magazine dedicated to highlighting black chefs and the black experience in food, wine, and travel culture. I made a total of 3 images, with an additional three revised for client’s approval. 
             </p>
           </div>
+          <div id="imgc1">
+            <figure>
+              <img src="img/ProjectsPortfolioHungrySociety_4.jpg" alt="Graphic Art for Cusine Noir - 2" />
+              <figcaption class="caption">Graphic Art for Cusine Noir - 2</figcaption>
+            </figure>
+          </div>
           <div id="parac1">
             <p>
               I wanted to achieve a feeling of celebration of all that the magazine has accomplished while also staying in theme for the magazine. I created a banner that took the chefs on some cover pages of the magazine from years prior but decided to do a collage instead so that the focus was on the magazine and not the chefs themselves. This is why I feature the title in the center. I kept the original font to help with brand recognizability. 
             </p>
           </div>
+          
           <div id="imgc1">
-            <img src="img/ProjectsPortfolioHungrySociety_4.jpg" alt="website image" />
-          </div>
-          <div id="imgc1">
-            <img src="img/ProjectsPortfolioHungrySociety_5.jpg" alt="website image" />
+            <figure>
+              <img src="img/ProjectsPortfolioHungrySociety_5.jpg" alt="Graphic Art for Cusine Noir - 3" />
+              <figcaption class="caption">Graphic Art for Cusine Noir - 3</figcaption>
+            </figure>
           </div>
           <div id="parac1">
             <p>
